# EnglishBot

./: .dockerignore  .env.example  .env.server.bot-only.example  .gitignore  3Prompt  4LessonExtractorPrompt  5ImageGEnerationPrompt  6SeparateAiPrompt  AGENTS.md  ARCHITECTURE.md  BasicPrompt  CHANGELOG.md  Dockerfile  Dockerfile.tts  README.md  SecondPrompt  bulk.txt  docker-compose.optional.yml  docker-compose.yml  image-rerank-decisions.json  image-rerank-manifest.json  lesson.txt  pyproject.toml
.devcontainer/: Dockerfile  README.md  check-host-gpu.sh  comfyui.env  devcontainer.cpu.json  devcontainer.gpu.json  devcontainer.json  devcontainer.noai.json  fix-container-perms.sh  local-ai.env  local-ai.on.env  manage-generation-services.sh  ollama.env  prepare-host-dirs.sh  start-comfyui.sh  start-ollama.sh
docs/: 1.0.0-plan.md  bot-py-map.md  deployment-recommendations.md  docker-server-setup.md  homework-progress.md  media-catalog-workbook.md  release-1.0.0.md  repo-map.md  telegram-interaction-contract.md  telegram-runtime-map.md  telegram-webapp-admin.md
output/: image-rerank-decisions.local.json  image-rerank-manifest.local.json
prompts/: Scissors — ножницы  ollama_extract_line_prompt.txt  ollama_extract_text_prompt.txt  ollama_image_prompt_prompt.txt  ollama_infer_topic_prompt.txt  ollama_model.txt
scripts/: backup-runtime-db.sh  bootstrap-hetzner-docker-host.sh  deploy-docker-app.sh  issue-webapp-cert.sh  reset-runtime-state.sh  restore-runtime-db.sh  rollback-docker-app.sh  switch-devcontainer-profile.sh  switch-local-ai-mode.sh
tests/: test_config.py  (+82 more)
(+172 files in other folders)
